# sonia.one

./: .gitignore  .gitmodules  FUNDING.yml  README.md  build_config.hpp.in  pull-all.sh  push-all.sh  tpls_macos_build.sh  tpls_vc_build.bat  tpls_win_build.bat
.circleci/: config.yml
projects/cmake/: CMakeLists.txt  Common.cmake  android.toolchain.cmake  clang.toolchain.cmake  gcc.toolchain.cmake  ios.sim.toolchain.cmake  ios.toolchain.cmake  mac.toolchain.cmake  mingw.toolchain.cmake
projects/cmake/angel/: CMakeLists.txt
projects/cmake/dev-test/: CMakeLists.txt
projects/cmake/regression-test/: CMakeLists.txt
projects/vs/: sonia.one.sln
projects/vs/angel/: angel.vcxproj  angel.vcxproj.filters
projects/vs/test/: test.vcxproj  test.vcxproj.filters
scripts/: build.cmd  loop.cmd  run_sonia_test.cmd
scripts/docker/: build.cmd  build.sh  build_angel.cmd  build_angel.sh  build_dev.cmd  build_dev.sh  build_dev_clang.cmd  build_dev_clang.sh  build_dev_valgrind.cmd  build_dev_valgrind.sh  console.cmd  console_valgrind.cmd  loop.cmd  run_angel.cmd  run_angel.sh  run_dev-test.cmd  run_dev-test.sh  run_dev-test_valgrind.cmd  run_dev-test_valgrind.sh  run_regression-test.cmd  run_regression-test.sh
scripts/docker-build-image/: Dockerfile  Dockerfile.console  Dockerfile_valgrind_on  Dockerfile_valgrind_on.console  build.cmd  build.sh  build_valgrind_on.cmd  build_valgrind_on.sh  key.asc
scripts/docker-build-image/docker.android.build/: Dockerfile  build-sys.sh  build.cmd  prepare-deps.sh
scripts/docker-build-image/docker.hub.base/: Dockerfile  build-deps.sh  build-sys.sh  build.cmd  download-deps.sh
scripts/docker-build-image/docker.rpi.build/: Dockerfile  build-sys.sh  build.cmd  console.cmd  gcc.10.1.config  gcc.8.3.config
scripts/ios/: build.ios.sh  build.sim.sh
scripts/macos/: build-dev.sh  build.sh  run_regression_test.sh
scripts/mingw/: build.cmd  build_dev.cmd  loop.cmd  run_dev.cmd  run_regression-test-static.cmd  run_regression-test.cmd
scripts/tpls/: boost.android.cmd  boost.cmd  boost.mingw64.cmd  boost.vc.cmd  bzip2.cmd  cairo.cmd  icu.android.cmd  icu.cmd  icu.mingw64.cmd  icu_vs2017.cmd  lexertl.cmd  libpng.cmd  lz4.cmd  openssl.cmd  pixman.cmd  zlib.cmd
scripts/tpls/4android/: boost.sh  build.cmd  icu.sh  util.sh
scripts/tpls/boost/1.74.0/: boost.cmd  boost.mac.sh  boost.macosx.sh  locale.Jamfile.v2  regex.Jamfile.v2
scripts/tpls/bzip2/1.0.6/: Makefile  bzip2.mac.sh  bzip2.sh
scripts/tpls/icu/maint-67/: icu.cmd  icu.mac.sh  icu.macosx.sh  icu.mingw.cmd
scripts/tpls/macos/: boost.sh  lexertl.sh
scripts/tpls/openssl/OpenSSL_1_1_1-stable/: openssl.cmd  openssl.ios.sh  openssl.mac.sh
scripts/tpls/util/: android.cmd
scripts/tpls/workaround/: pod2html.bat
scripts/tpls/zlib/1.2.11/: zlib.ios.sh
workdirs/angel/: config.json  localhost.crt  localhost.key  log.conf
workdirs/tests/: host.json  log.conf
